Update font family for text elements in index.html

--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
           
           <tr>
             <td align="center" style="background: #E6DED7; padding: 40px; color:#333; width:100%">
-              <p style="font-size: 16px; margin:0;">
+              <p style="font-size: 16px; margin:0; font-family: Inter, Arial, sans-serif;">
                 10% off discount code
               </p>
-              <h2 style="font-size: 30px; margin:0;">BHLCF - 26</h2>
+              <h2 style="font-size: 30px; margin:0; font-family: Inter, Arial, sans-serif;">BHLCF - 26</h2>
             </td>
           </tr>
           
@@ -78,7 +78,7 @@
                     </td>
                     </tr>
                 </table>
-                <p>Click here to <a href="#" style="text-decoration: none;">unsubscribe</a></p>
+                <p>Click here to <a href="#" style="text-decoration: none; font-family: Inter, Arial, sans-serif;">unsubscribe</a></p>
             </td>
           </tr>
         </table>
