Update link style in index.html

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
              <h1 style="line-height: 1; font-size: 32px; margin:0; font-family: Inter, Arial, sans-serif;">Welcome to <br> Luxewears</h1>
              <p style="line-height: 1.7; font-size: 16px; font-family: Inter, Arial, sans-serif;">Thanks for joining LuxeWear. Expect exclusive<br>drops, style tips, and member-only discounts</p>
              
-             <a href="#" style="background: #3b2d1f; color: white; padding: 25px 35px; text-decoration: none; border-radius: 100vw; font-weight: bold; display: inline-block;">Claim your discount</a>
+             <a href="#" style="background: #3b2d1f; font-family: Inter, Arial, sans-serif; color: white; padding: 25px 35px; text-decoration: none; border-radius: 100vw; font-weight: bold; display: inline-block;">Claim your discount</a>
            </td>
           </tr>
           
